--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 .container {
     max-width: 450px;
     border: 1px solid black;
+    padding: 0 10px;
 }
+
 header {
     background-color: white;
-    padding: 0 10px;
     text-align: start;
     position: fixed;
     width: 450px;
@@ -26,19 +28,23 @@ header {
     display: flex;
     align-items: center;
 }
+
 label {
     position: absolute;
     right: 95px;
 }
+
 #search-icon {
     color: white;
     background-color: black;
     padding: 10px;
     border-radius: 50px;
 }
+
 .space {
-    height: 50px;
+    height: 80px;
 }
+
 #search-box {
     width: 70%;
     padding: 10px;
@@ -48,6 +54,36 @@ label {
     border-radius: 50px;
     position: relative;
 }
+
+#type-of-product {
+    width: 100%;
+    overflow-x: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+#type-of-product > a {
+    text-decoration: none;
+    color: black;
+}
+
+.pilyonka {
+    width: 100px;
+    text-align: center;
+}
+
+.pilyonka img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+
+.pilyonka img:hover {
+    border: 3px solid black;
+}
+
 #products {
     display: flex;
     justify-content: center;
