--- a/style.css
+++ b/style.css
@@ -98,39 +98,60 @@ label {
     gap: 20px;
     padding: 20px;
 }
+
 .product {
     border: 1px solid #ddd;
     padding: 15px;
     width: 250px;
     text-align: center;
 }
+
 .product img {
     width: 100%;
     height: auto;
 }
+
 #cart {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background: #333;
-    color: white;
-    padding: 15px;
-    text-align: center;
+    background: white;
+    color: black;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
+
 #cart-items {
     list-style: none;
     padding: 0;
 }
+
 #cart-items li {
     margin: 5px 0;
+    font-size: 10px;
 }
+
+#cart-icon {
+    color: white;
+    background-color: black;
+    padding: 10px;
+    border-radius: 50px;
+}
+
 button {
-    background: #28a745;
+    background: #3944BC;
+    transition: all 0.3s ease;
     color: white;
     border: none;
+    height: 35px;
     padding: 10px;
     cursor: pointer;
+    border-radius: 10px;
 }
+
 button:hover {
-    background: #218838;
+    background: #1338BE;
 }
