--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     max-width: 410px;
-    padding: 0 10px;
+    border: 1px solid black;
 }
 
 header {
@@ -26,6 +26,7 @@ header {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
     display: flex;
     align-items: center;
+    top: 0;
 }
 
 label {
