--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     max-width: 410px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 header {
@@ -27,6 +27,7 @@ header {
     display: flex;
     align-items: center;
     top: 0;
+    z-index: 1;
 }
 
 label {
@@ -43,6 +44,10 @@ label {
 
 .space {
     height: 80px;
+}
+
+.space2 {
+    height: 300px;
 }
 
 #search-box {
@@ -102,9 +107,50 @@ label {
 
 .product {
     border: 1px solid #ddd;
-    padding: 15px;
-    width: 250px;
-    text-align: center;
+    /* padding: 10px; */
+    width: 100%;
+    /* text-align: center; */
+    padding-bottom: 10px;
+    position: relative;
+}
+
+.product button {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+}
+
+.product h3 {
+    margin: 10px 0 5px;
+    color: black;
+}
+
+.product .tafsilot {
+    color: #777;
+    font-size: 11px;
+    margin-bottom: 20px;
+}
+
+.product .narx {
+    font-size: 17px;
+    margin: 5px 0;
+}
+
+.product .narx span {
+    font-size: 30px;
+    font-weight: 600;
+    color: red;
+}
+
+.product input {
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+    outline: none;
+}
+
+.product .jami span {
+    font-weight: 800;
 }
 
 .product img {
@@ -115,10 +161,10 @@ label {
 #cart {
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 410px;
     background: white;
     color: black;
-    padding: 10px;
+    padding: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
