--- a/style.css
+++ b/style.css
@@ -70,7 +70,12 @@ label {
 
 #type-of-product > a {
     text-decoration: none;
+    padding-bottom: 5px;
     color: black;
+}
+
+#type-of-product > a:hover {
+    border-bottom: 3px solid blue;
 }
 
 .pilyonka {
@@ -90,7 +95,7 @@ label {
 }
 
 .pilyonka img:hover {
-    border: 3px solid black;
+    border: 3px solid blue;
 }
 
 #uzb {
@@ -106,7 +111,6 @@ label {
 }
 
 .product {
-    border: 1px solid #ddd;
     /* padding: 10px; */
     width: 100%;
     /* text-align: center; */
@@ -126,8 +130,9 @@ label {
 }
 
 .product .tafsilot {
-    color: #777;
+    color: #999;
     font-size: 11px;
+    font-weight: 600;
     margin-bottom: 20px;
 }
 
@@ -143,8 +148,7 @@ label {
 }
 
 .product input {
-    width: 30px;
-    height: 30px;
+    padding: 5px 5px;
     border-radius: 10px;
     outline: none;
 }
