--- a/style.css
+++ b/style.css
@@ -32,13 +32,24 @@ header {
 
 label {
     position: absolute;
-    right: 40px;
+    right: 60px;
 }
 
 #search-icon {
     color: white;
     background-color: black;
     padding: 10px;
+    border-radius: 50px;
+}
+
+.admin {
+    position: absolute;
+    right: 20px;
+    font-size: 14px;
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    padding: 10px 13px;
     border-radius: 50px;
 }
 
@@ -51,7 +62,7 @@ label {
 }
 
 #search-box {
-    width: 80%;
+    width: 75%;
     padding: 10px;
     margin: 10px 0;
     font-size: 16px;
@@ -75,7 +86,7 @@ label {
 }
 
 #type-of-product > a:hover {
-    border-bottom: 3px solid blue;
+    border-bottom: 3px solid black;
 }
 
 .pilyonka {
@@ -95,7 +106,7 @@ label {
 }
 
 .pilyonka img:hover {
-    border: 3px solid blue;
+    border: 3px solid black;
 }
 
 #uzb {
